compiler/mesh-parser/tests/snapshots/parser_tests__closure_in_pipe_chain.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn main() do\\n  let list = (1, 2, 3)\\n  list |> map(fn x -> x * 2 end)\\nend\")"
---
SOURCE_FILE@0..72
  FN_DEF@0..72
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..7
      IDENT@3..7 "main"
    PARAM_LIST@7..9
      L_PAREN@7..8 "("
      R_PAREN@8..9 ")"
    WHITESPACE@9..10 " "
    DO_KW@10..12 "do"
    BLOCK@12..69
      NEWLINE@12..13 "\n"
      WHITESPACE@13..15 "  "
      LET_BINDING@15..35
        LET_KW@15..18 "let"
        WHITESPACE@18..19 " "
        NAME@19..23
          IDENT@19..23 "list"
        WHITESPACE@23..24 " "
        EQ@24..25 "="
        WHITESPACE@25..26 " "
        TUPLE_EXPR@26..35
          L_PAREN@26..27 "("
          LITERAL@27..28
            INT_LITERAL@27..28 "1"
          COMMA@28..29 ","
          WHITESPACE@29..30 " "
          LITERAL@30..31
            INT_LITERAL@30..31 "2"
          COMMA@31..32 ","
          WHITESPACE@32..33 " "
          LITERAL@33..34
            INT_LITERAL@33..34 "3"
          R_PAREN@34..35 ")"
      NEWLINE@35..36 "\n"
      WHITESPACE@36..38 "  "
      PIPE_EXPR@38..68
        NAME_REF@38..42
          IDENT@38..42 "list"
        WHITESPACE@42..43 " "
        PIPE@43..45 "|>"
        WHITESPACE@45..46 " "
        CALL_EXPR@46..68
          NAME_REF@46..49
            IDENT@46..49 "map"
          ARG_LIST@49..68
            L_PAREN@49..50 "("
            CLOSURE_EXPR@50..67
              FN_KW@50..52 "fn"
              WHITESPACE@52..53 " "
              PARAM_LIST@53..54
                PARAM@53..54
                  IDENT@53..54 "x"
              WHITESPACE@54..55 " "
              ARROW@55..57 "->"
              WHITESPACE@57..58 " "
              BLOCK@58..63
                BINARY_EXPR@58..63
                  NAME_REF@58..59
                    IDENT@58..59 "x"
                  WHITESPACE@59..60 " "
                  STAR@60..61 "*"
                  WHITESPACE@61..62 " "
                  LITERAL@62..63
                    INT_LITERAL@62..63 "2"
              WHITESPACE@63..64 " "
              END_KW@64..67 "end"
            R_PAREN@67..68 ")"
      NEWLINE@68..69 "\n"
    END_KW@69..72 "end"
  EOF@72..72 ""
