compiler/mesh-parser/tests/snapshots/parser_tests__closure_multi_clause.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn 0 -> 42 | n -> n + 1 end\")"
---
SOURCE_FILE@0..27
  CLOSURE_EXPR@0..27
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    PARAM_LIST@3..4
      PARAM@3..4
        LITERAL_PAT@3..4
          INT_LITERAL@3..4 "0"
    WHITESPACE@4..5 " "
    ARROW@5..7 "->"
    WHITESPACE@7..8 " "
    BLOCK@8..10
      LITERAL@8..10
        INT_LITERAL@8..10 "42"
    WHITESPACE@10..11 " "
    CLOSURE_CLAUSE@11..23
      BAR@11..12 "|"
      WHITESPACE@12..13 " "
      PARAM_LIST@13..14
        PARAM@13..14
          IDENT@13..14 "n"
      WHITESPACE@14..15 " "
      ARROW@15..17 "->"
      WHITESPACE@17..18 " "
      BLOCK@18..23
        BINARY_EXPR@18..23
          NAME_REF@18..19
            IDENT@18..19 "n"
          WHITESPACE@19..20 " "
          PLUS@20..21 "+"
          WHITESPACE@21..22 " "
          LITERAL@22..23
            INT_LITERAL@22..23 "1"
    WHITESPACE@23..24 " "
    END_KW@24..27 "end"
  EOF@27..27 ""
