compiler/mesh-parser/tests/snapshots/parser_tests__closure_multi_clause_three.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn 0 -> 42 | 1 -> 99 | n -> n + 1 end\")"
---
SOURCE_FILE@0..37
  CLOSURE_EXPR@0..37
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    PARAM_LIST@3..4
      PARAM@3..4
        LITERAL_PAT@3..4
          INT_LITERAL@3..4 "0"
    WHITESPACE@4..5 " "
    ARROW@5..7 "->"
    WHITESPACE@7..8 " "
    BLOCK@8..10
      LITERAL@8..10
        INT_LITERAL@8..10 "42"
    WHITESPACE@10..11 " "
    CLOSURE_CLAUSE@11..20
      BAR@11..12 "|"
      WHITESPACE@12..13 " "
      PARAM_LIST@13..14
        PARAM@13..14
          LITERAL_PAT@13..14
            INT_LITERAL@13..14 "1"
      WHITESPACE@14..15 " "
      ARROW@15..17 "->"
      WHITESPACE@17..18 " "
      BLOCK@18..20
        LITERAL@18..20
          INT_LITERAL@18..20 "99"
    WHITESPACE@20..21 " "
    CLOSURE_CLAUSE@21..33
      BAR@21..22 "|"
      WHITESPACE@22..23 " "
      PARAM_LIST@23..24
        PARAM@23..24
          IDENT@23..24 "n"
      WHITESPACE@24..25 " "
      ARROW@25..27 "->"
      WHITESPACE@27..28 " "
      BLOCK@28..33
        BINARY_EXPR@28..33
          NAME_REF@28..29
            IDENT@28..29 "n"
          WHITESPACE@29..30 " "
          PLUS@30..31 "+"
          WHITESPACE@31..32 " "
          LITERAL@32..33
            INT_LITERAL@32..33 "1"
    WHITESPACE@33..34 " "
    END_KW@34..37 "end"
  EOF@37..37 ""
