compiler/mesh-parser/tests/snapshots/parser_tests__closure_nested_do_end_in_body.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn x -> if x > 0 do x else 0 - x end end\")"
---
SOURCE_FILE@0..40
  CLOSURE_EXPR@0..40
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    PARAM_LIST@3..4
      PARAM@3..4
        IDENT@3..4 "x"
    WHITESPACE@4..5 " "
    ARROW@5..7 "->"
    WHITESPACE@7..8 " "
    BLOCK@8..36
      IF_EXPR@8..36
        IF_KW@8..10 "if"
        WHITESPACE@10..11 " "
        BINARY_EXPR@11..16
          NAME_REF@11..12
            IDENT@11..12 "x"
          WHITESPACE@12..13 " "
          GT@13..14 ">"
          WHITESPACE@14..15 " "
          LITERAL@15..16
            INT_LITERAL@15..16 "0"
        WHITESPACE@16..17 " "
        DO_KW@17..19 "do"
        WHITESPACE@19..20 " "
        BLOCK@20..21
          NAME_REF@20..21
            IDENT@20..21 "x"
        WHITESPACE@21..22 " "
        ELSE_BRANCH@22..36
          ELSE_KW@22..26 "else"
          WHITESPACE@26..27 " "
          BLOCK@27..32
            BINARY_EXPR@27..32
              LITERAL@27..28
                INT_LITERAL@27..28 "0"
              WHITESPACE@28..29 " "
              MINUS@29..30 "-"
              WHITESPACE@30..31 " "
              NAME_REF@31..32
                IDENT@31..32 "x"
          WHITESPACE@32..33 " "
          END_KW@33..36 "end"
    WHITESPACE@36..37 " "
    END_KW@37..40 "end"
  EOF@40..40 ""
