compiler/mesh-parser/tests/snapshots/parser_tests__closure_pipe_inside_closure_body.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn x -> x |> to_string() end\")"
---
SOURCE_FILE@0..28
  CLOSURE_EXPR@0..28
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    PARAM_LIST@3..4
      PARAM@3..4
        IDENT@3..4 "x"
    WHITESPACE@4..5 " "
    ARROW@5..7 "->"
    WHITESPACE@7..8 " "
    BLOCK@8..24
      PIPE_EXPR@8..24
        NAME_REF@8..9
          IDENT@8..9 "x"
        WHITESPACE@9..10 " "
        PIPE@10..12 "|>"
        WHITESPACE@12..13 " "
        CALL_EXPR@13..24
          NAME_REF@13..22
            IDENT@13..22 "to_string"
          ARG_LIST@22..24
            L_PAREN@22..23 "("
            R_PAREN@23..24 ")"
    WHITESPACE@24..25 " "
    END_KW@25..28 "end"
  EOF@28..28 ""
