compiler/mesh-parser/tests/snapshots/parser_tests__closure_single_param.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn (x) -> x + 1 end\")"
---
SOURCE_FILE@0..19
  CLOSURE_EXPR@0..19
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    PARAM_LIST@3..6
      L_PAREN@3..4 "("
      PARAM@4..5
        IDENT@4..5 "x"
      R_PAREN@5..6 ")"
    WHITESPACE@6..7 " "
    ARROW@7..9 "->"
    WHITESPACE@9..10 " "
    BLOCK@10..15
      BINARY_EXPR@10..15
        NAME_REF@10..11
          IDENT@10..11 "x"
        WHITESPACE@11..12 " "
        PLUS@12..13 "+"
        WHITESPACE@13..14 " "
        LITERAL@14..15
          INT_LITERAL@14..15 "1"
    WHITESPACE@15..16 " "
    END_KW@16..19 "end"
  EOF@19..19 ""
