compiler/mesh-parser/tests/snapshots/parser_tests__closure_tuple_pattern_param.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn (a, b) -> a + b end\")"
---
SOURCE_FILE@0..22
  CLOSURE_EXPR@0..22
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    PARAM_LIST@3..9
      L_PAREN@3..4 "("
      PARAM@4..5
        IDENT@4..5 "a"
      COMMA@5..6 ","
      WHITESPACE@6..7 " "
      PARAM@7..8
        IDENT@7..8 "b"
      R_PAREN@8..9 ")"
    WHITESPACE@9..10 " "
    ARROW@10..12 "->"
    WHITESPACE@12..13 " "
    BLOCK@13..18
      BINARY_EXPR@13..18
        NAME_REF@13..14
          IDENT@13..14 "a"
        WHITESPACE@14..15 " "
        PLUS@15..16 "+"
        WHITESPACE@16..17 " "
        NAME_REF@17..18
          IDENT@17..18 "b"
    WHITESPACE@18..19 " "
    END_KW@19..22 "end"
  EOF@22..22 ""
